--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "json-server": "^1.0.0-beta.2",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-emoji-render": "^2.0.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.2",
     "vite-plugin-eslint": "^1.8.1"
   },
